# WpGuard

./: .env  .env.example  README.md  pyproject.toml  requirements.txt  run.py  test_advanced_scheduler.py  test_complete_workflow.py  test_phase9_complete.py  test_scheduler.py  wpguard.db
app/: __init__.py  main.py
app/api/: advanced_security.py  ftp.py  report.py  scan.py  scheduler.py  upload.py
app/core/: config.py  database.py
app/models/: findings.py  scan.py
app/scanner/: __init__.py  advanced_reporting.py  baseline.py  integrity.py  malware.py  ml_detection.py
app/scanner/signatures/: malware_hashes.json
app/scheduler/: __init__.py  notifications.py  scheduler.py
frontend/static/: index.html
frontend/static/css/: styles.css
frontend/static/js/: app.js
reports/: 20250531232612-ae360090.json  20250531233212-051f7fc6.json
snapshots/: 20250531232612-ae360090.json  20250531233212-051f7fc6.json
temp/20250531233212-051f7fc6/extracted/: index.php
test_wp/: malicious.php  wp-config.php
tests/: test_basic.py
