[tool.poetry]
name = "wpguard"
version = "0.1.0"
description = "WordPress File Integrity Scanner - External Python-based application to scan WordPress files for anomalies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"
yara-python = "^4.5.0"
sqlmodel = "^0.0.14"
pydantic = "^2.5.0"
paramiko = "^3.4.0"
apscheduler = "^3.10.4"
python-telegram-bot = "^20.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
